# opencv_and_cuda

./: CMakeLists.txt  README.md  main.cu  main.h  run.cpp
